sesc.User -> *ent.User in API (messy)
