# apiclient/models/respond_user.go
@@ -1,0 +1,318 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// RespondUser respond user
+//
+// swagger:model respond.User
+type RespondUser struct {
+
+	// academic degree
+	// Example: 2
+	AcademicDegree int64 `json:"academicDegree,omitempty"`
+
+	// academic title
+	// Example: Профессор
+	AcademicTitle string `json:"academicTitle,omitempty"`
+
+	// category
+	// Example: Высшая
+	Category string `json:"category,omitempty"`
+
+	// date of employment
+	// Example: 2020-01-15T00:00:00Z
+	DateOfEmployment string `json:"dateOfEmployment,omitempty"`
+
+	// department Id
+	DepartmentID string `json:"departmentId,omitempty"`
+
+	// employment rate
+	// Example: 1
+	// Required: true
+	EmploymentRate *float64 `json:"employmentRate"`
+
+	// employment type
+	// Example: 1
+	// Required: true
+	EmploymentType *int64 `json:"employmentType"`
+
+	// first name
+	// Example: Ivan
+	// Required: true
+	FirstName *string `json:"firstName"`
+
+	// honors
+	// Example: Заслуженный деятель науки
+	Honors string `json:"honors,omitempty"`
+
+	// id
+	// Example: 550e8400-e29b-41d4-a716-446655440000
+	// Required: true
+	ID *string `json:"id"`
+
+	// job title
+	// Example: Профессор
+	// Required: true
+	JobTitle *string `json:"jobTitle"`
+
+	// last name
+	// Example: Petrov
+	// Required: true
+	LastName *string `json:"lastName"`
+
+	// middle name
+	// Example: Sergeevich
+	MiddleName string `json:"middleName,omitempty"`
+
+	// personnel category
+	// Example: 1
+	// Required: true
+	PersonnelCategory *int64 `json:"personnelCategory"`
+
+	// picture Url
+	// Example: /images/users/ivan.jpg
+	// Required: true
+	PictureURL *string `json:"pictureUrl"`
+
+	// role
+	// Required: true
+	Role *RespondRole `json:"role"`
+
+	// subdivision
+	// Example: Кафедра информатики
+	// Required: true
+	Subdivision *string `json:"subdivision"`
+
+	// suspended
+	// Required: true
+	Suspended *bool `json:"suspended"`
+
+	// unemployment date
+	// Example: 2023-12-31T00:00:00Z
+	UnemploymentDate string `json:"unemploymentDate,omitempty"`
+}
+
+// Validate validates this respond user
+func (m *RespondUser) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateEmploymentRate(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateEmploymentType(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateFirstName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateJobTitle(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateLastName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validatePersonnelCategory(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validatePictureURL(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateRole(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateSubdivision(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateSuspended(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *RespondUser) validateEmploymentRate(formats strfmt.Registry) error {
+
+	if err := validate.Required("employmentRate", "body", m.EmploymentRate); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *RespondUser) validateEmploymentType(formats strfmt.Registry) error {
+
+	if err := validate.Required("employmentType", "body", m.EmploymentType); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *RespondUser) validateFirstName(formats strfmt.Registry) error {
+
+	if err := validate.Required("firstName", "body", m.FirstName); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *RespondUser) validateID(formats strfmt.Registry) error {
+
+	if err := validate.Required("id", "body", m.ID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *RespondUser) validateJobTitle(formats strfmt.Registry) error {
+
+	if err := validate.Required("jobTitle", "body", m.JobTitle); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *RespondUser) validateLastName(formats strfmt.Registry) error {
+
+	if err := validate.Required("lastName", "body", m.LastName); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *RespondUser) validatePersonnelCategory(formats strfmt.Registry) error {
+
+	if err := validate.Required("personnelCategory", "body", m.PersonnelCategory); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *RespondUser) validatePictureURL(formats strfmt.Registry) error {
+
+	if err := validate.Required("pictureUrl", "body", m.PictureURL); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *RespondUser) validateRole(formats strfmt.Registry) error {
+
+	if err := validate.Required("role", "body", m.Role); err != nil {
+		return err
+	}
+
+	if m.Role != nil {
+		if err := m.Role.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("role")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("role")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+func (m *RespondUser) validateSubdivision(formats strfmt.Registry) error {
+
+	if err := validate.Required("subdivision", "body", m.Subdivision); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *RespondUser) validateSuspended(formats strfmt.Registry) error {
+
+	if err := validate.Required("suspended", "body", m.Suspended); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validate this respond user based on the context it is used
+func (m *RespondUser) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateRole(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *RespondUser) contextValidateRole(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.Role != nil {
+
+		if err := m.Role.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("role")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("role")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *RespondUser) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *RespondUser) UnmarshalBinary(b []byte) error {
+	var res RespondUser
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
